<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.packageDetails.PackageDetailsFragment">

    <ImageView
        android:id="@+id/backImgv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="@font/stv_bold"
        android:text="@string/package_details"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/to"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/date"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/time"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/type"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/important"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="المحلة الكبري"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="القاهرة"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="22-10-2020"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="50:20 PM"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="اوراق ومستندات"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="قابل للكسر"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/boxDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/orderDesc"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear" />

    <TextView
        android:id="@+id/boxDescTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="هناك اوراق مهمة داخل البوكس"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boxDesc" />

    <TextView
        android:id="@+id/boxImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/boxImages"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boxDescTv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boxImages"
        tools:listitem="@layout/image_item_view" />

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagesRv">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"

            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/userplaceholder2" />


        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/userName"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="8dp"
            android:src="@drawable/chat" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="8dp"
            android:src="@drawable/call" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/oKMbtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userInfo"
        app:rippleColor="@color/colorAccent"
        app:strokeColor="@android:color/darker_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>