<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.orderSuccess.OrderSuccessFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/successoperationbg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:id="@+id/close"
        android:src="@drawable/close" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/stv_bold"
            android:gravity="center"
            android:text="@string/your_order_completed_successfully"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/one_of_our_drivers_will_contact_you_and_you_will_be_notified_once_we_approve_your_request"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@android:color/darker_gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/returnToHomeMbtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/stv_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/returnToHome"
            android:textAllCaps="false"
            android:textAppearance="?attr/textAppearanceBody1"
            app:cornerRadius="10dp"
            app:rippleColor="@color/colorAccent"
            app:strokeColor="@android:color/darker_gray" />

    </LinearLayout>
</FrameLayout>